--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".\\adapter\\kritor\\kritor"]
-	path = .\\adapter\\kritor\\kritor
+[submodule "kritor"]
+	path = adapter/kritor/kritor
 	url = https://github.com/KarinJS/kritor.git
