--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
     "WeXin": "0.0.3"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.3",
+    "@grpc/proto-loader": "^0.7.10",
+    "async-mutex": "^0.5.0",
     "axios": "^1.6.8",
     "conventional-changelog-cli": "^4.1.0",
     "express": "^4.19.1",
     "file-type": "^19.0.0",
     "get-urls": "^12.1.0",
+    "icqq": "0.6.10",
+    "protobufjs": "^7.2.6",
     "qq-group-bot": "1.0.34",
     "qrcode": "^1.5.3",
     "sharp": "^0.33.1",
     "silk-wasm": "^3.2.4",
     "wechat4u": "^0.7.14",
-    "ws": "^8.16.0",
-    "icqq": "0.6.10"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
